--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('assets/spartan.jpg'); /* Caminho da imagem de fundo */
+    background-image: url("/assets/spartan.jpg"); /* Caminho absoluto */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
