--- a/src/app/step-two/step-two.component.html
+++ b/src/app/step-two/step-two.component.html
@@ -9,5 +9,6 @@
     <div *ngIf="result" class="result">
       <p>Resultado: {{ result }}</p>
     </div>
+    <button mat-button color="warn" routerLink="/step-one">Voltar</button> <!-- Botão de Voltar -->
   </mat-card-content>
 </mat-card>
