--- a/src/app/step-two/step-two.component.scss
+++ b/src/app/step-two/step-two.component.scss
@@ -6,7 +6,7 @@
 .center-title {
   text-align: center;
   margin-bottom: 16px;
-  color: #333; /* Cor do texto para contraste */
+  color: #333;
 }
 
 .input-field {
@@ -17,5 +17,13 @@
 .result {
   margin-top: 16px;
   font-weight: bold;
-  color: #333; /* Cor do texto para contraste */
+  color: #333;
+}
+
+button {
+  margin-top: 16px;
+}
+
+button + button {
+  margin-left: 16px;
 }
