--- a/src/app/step-one/step-one.component.scss
+++ b/src/app/step-one/step-one.component.scss
@@ -6,7 +6,7 @@
 .center-title {
   text-align: center;
   margin-bottom: 16px;
-  color: #333; /* Cor do texto para contraste */
+  color: #333;
 }
 
 .button-group {
